[package]
name = "solana-count-tps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.14.6"
solana-sdk = "1.14.6"
solana-transaction-status = "1.14.6"
chrono = "0.4"
log = "0.4.17"
env_logger = "0.9.1"
dotenv ="0.15.0"
